# broccoli

./: CMakeLists.txt  README.md  broccoli.sln  broccoli.vcxproj  broccoli.vcxproj.filters  log.cpp  log.h
broccoli/: config.cpp  config.h  env.cpp  env.h  log.cpp  log.h  singleton.h  util.cpp  util.h
test/: test.cpp
tests/: test.cpp  test_config.cpp
